[gd_scene load_steps=59 format=2]

[ext_resource path="res://Textures/tutorial.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Tutorial/Button.gd" type="Script" id=3]
[ext_resource path="res://Spritesheets/explosion.png" type="Texture" id=4]
[ext_resource path="res://Sound/explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://Textures/easteregg1.png" type="Texture" id=6]
[ext_resource path="res://Player/Player_tutorial.gd" type="Script" id=7]
[ext_resource path="res://Voice/Tutorial/tutorial_Welcome.mp3" type="AudioStream" id=8]
[ext_resource path="res://Levels/Tutorial/Tutorial.gd" type="Script" id=9]
[ext_resource path="res://Voice/Tutorial/tutorial_Looking.mp3" type="AudioStream" id=10]
[ext_resource path="res://Voice/Tutorial/tutorial_Amazing.mp3" type="AudioStream" id=11]
[ext_resource path="res://Voice/Tutorial/tutorial_Moving.mp3" type="AudioStream" id=12]
[ext_resource path="res://Voice/Tutorial/tutorial_Speechless.mp3" type="AudioStream" id=13]
[ext_resource path="res://Voice/Tutorial/tutorial_Jumping.mp3" type="AudioStream" id=14]
[ext_resource path="res://Voice/Tutorial/tutorial_Crouching.mp3" type="AudioStream" id=15]
[ext_resource path="res://Voice/Tutorial/tutorial_Sprinting.mp3" type="AudioStream" id=16]
[ext_resource path="res://Voice/Tutorial/tutorial_Interacting.mp3" type="AudioStream" id=17]
[ext_resource path="res://Voice/Tutorial/tutorial_Congratulations.mp3" type="AudioStream" id=18]
[ext_resource path="res://Textures/gamer_diploma.png" type="Texture" id=19]
[ext_resource path="res://Levels/Tutorial/Diploma.gd" type="Script" id=20]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 0.25, 0.25, 0.25 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=49]
extents = Vector3( 8, 4, 1 )

[sub_resource type="BoxShape" id=50]
extents = Vector3( 8, 4, 1 )

[sub_resource type="BoxShape" id=52]
extents = Vector3( 8, 6, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1, 1.26693 )

[sub_resource type="AtlasTexture" id=111]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=112]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=113]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=114]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=115]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=116]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=117]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=118]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=119]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=120]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=121]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=122]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=123]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=124]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=125]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=126]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=127]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=128]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=129]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=130]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=131]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=132]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 100, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=133]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 200, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=134]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 300, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=135]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 400, 400, 100, 100 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ) ],
"loop": false,
"name": "Explosion",
"speed": 24.0
} ]

[sub_resource type="BoxShape" id=51]
extents = Vector3( 8, 6, 1 )

[sub_resource type="BoxShape" id=53]

[sub_resource type="Animation" id=54]
resource_name = "DiplomaDescent"
length = 8.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("CSGCombiner/Section3/Diploma:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 3.5, 8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CSGCombiner/Section3/Diploma:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 3.5, 8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CSGCombiner/Section3/Diploma:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 3.5, 8 )
}

[sub_resource type="Animation" id=47]
resource_name = "FadeIn"
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("UI/BlackScreen:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("UI/BlackScreen:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("UI/BlackScreen:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("UI/BlackScreen:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 5 )
}

[sub_resource type="Animation" id=48]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("UI/BlackScreen:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("UI/BlackScreen:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("UI/BlackScreen:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("UI/BlackScreen:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CSGCombiner/Section3/Diploma:translation:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CSGCombiner/Section3/Diploma:translation:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CSGCombiner/Section3/Diploma:translation:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Tutorial" type="Spatial"]
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
script = ExtResource( 7 )
can_move = false
can_look = false
can_sprint = false
can_jump = false
can_crouch = false
can_interact = false
cutscene = true

[node name="Camera" parent="Player/Head" index="0"]
far = 175.0

[node name="CSGCombiner" type="CSGCombiner" parent="."]
use_collision = true

[node name="Ceiling" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.53674e-07, 16, -68 )
use_collision = true
width = 152.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="Section1" type="Spatial" parent="CSGCombiner"]

[node name="Floor" type="CSGBox" parent="CSGCombiner/Section1"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.53674e-07, 0, -16 )
use_collision = true
width = 48.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="Wall" type="CSGBox" parent="CSGCombiner/Section1"]
transform = Transform( 1.91069e-15, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, 8, 8, -68 )
use_collision = true
width = 152.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="Wall2" type="CSGBox" parent="CSGCombiner/Section1"]
transform = Transform( 1.91069e-15, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, -8, 8, -68 )
use_collision = true
width = 152.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="Wall3" type="CSGBox" parent="CSGCombiner/Section1"]
transform = Transform( -1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, 4.37114e-08, 1, 4.37114e-08, -9.53674e-07, 8, 8 )
use_collision = true
width = 16.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="Wall4" type="CSGBox" parent="CSGCombiner/Section1"]
transform = Transform( -1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, 4.37114e-08, 1, 4.37114e-08, -9.53674e-07, 8, -144 )
use_collision = true
width = 16.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="JumpLedge" type="CSGBox" parent="CSGCombiner/Section1"]
transform = Transform( -1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, 4.37114e-08, 1, 4.37114e-08, -9.53674e-07, 1, -40 )
use_collision = true
width = 16.0
height = 0.5
material = SubResource( 1 )

[node name="JumpTrigger" type="Area" parent="CSGCombiner/Section1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39 )

[node name="CollisionShape" type="CollisionShape" parent="CSGCombiner/Section1/JumpTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
shape = SubResource( 49 )

[node name="Section2" type="Spatial" parent="CSGCombiner"]

[node name="Floor2" type="CSGBox" parent="CSGCombiner/Section2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.75, -66 )
use_collision = true
width = 52.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="Floor3" type="CSGBox" parent="CSGCombiner/Section2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.75, -118 )
use_collision = true
width = 52.0
height = 0.5
depth = 16.0
material = SubResource( 1 )

[node name="CrouchWall" type="CSGBox" parent="CSGCombiner/Section2"]
transform = Transform( -1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, 4.37114e-08, 1, 4.37114e-08, -9.53674e-07, 11, -52 )
use_collision = true
width = 16.0
height = 0.5
depth = 10.0
material = SubResource( 1 )

[node name="CrouchTrigger" type="Area" parent="CSGCombiner/Section2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -51 )

[node name="CollisionShape" type="CollisionShape" parent="CSGCombiner/Section2/CrouchTrigger"]
shape = SubResource( 50 )

[node name="SprintingTrigger" type="Area" parent="CSGCombiner/Section2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -58 )

[node name="CollisionShape" type="CollisionShape" parent="CSGCombiner/Section2/SprintingTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 52 )

[node name="Section3" type="Spatial" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -138 )

[node name="Cube" type="CSGBox" parent="CSGCombiner/Section3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
use_collision = true
width = 4.0
depth = 4.0
material = SubResource( 1 )

[node name="Button" type="StaticBody" parent="CSGCombiner/Section3"]
script = ExtResource( 3 )

[node name="CSGSphere" type="CSGSphere" parent="CSGCombiner/Section3/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
material = SubResource( 2 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGCombiner/Section3/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75687, 0 )
radius = 1.13388
material = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="CSGCombiner/Section3/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26591, 0 )
shape = SubResource( 4 )

[node name="Explosion" type="AnimatedSprite3D" parent="CSGCombiner/Section3"]
transform = Transform( 4.55771, 0, 0, 0, 4.55771, 0, 0, 0, 4.55771, 0, 3.30698, 0.416519 )
visible = false
billboard = 1
frames = SubResource( 21 )
animation = "Explosion"
frame = 24

[node name="ExplosionSFX" type="AudioStreamPlayer3D" parent="CSGCombiner/Section3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
stream = ExtResource( 5 )
unit_db = 5.0
bus = "SFX"

[node name="Easter Egg" type="Sprite3D" parent="CSGCombiner/Section3"]
transform = Transform( -1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 0, 1.64605, -2.01039 )
texture = ExtResource( 6 )

[node name="SpotLight" type="SpotLight" parent="CSGCombiner/Section3"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 13, 0 )
shadow_enabled = true
spot_range = 17.7388
spot_angle = 21.6973

[node name="InteractionTrigger" type="Area" parent="CSGCombiner/Section3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="CollisionShape" type="CollisionShape" parent="CSGCombiner/Section3/InteractionTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 51 )

[node name="Diploma" type="StaticBody" parent="CSGCombiner/Section3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 0 )
script = ExtResource( 20 )

[node name="Sprite3D" type="Sprite3D" parent="CSGCombiner/Section3/Diploma"]
billboard = 1
texture = ExtResource( 19 )

[node name="CollisionShape" type="CollisionShape" parent="CSGCombiner/Section3/Diploma"]
shape = SubResource( 53 )

[node name="Timers" type="Spatial" parent="."]

[node name="WaitForLoad" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="VoiceClips" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, 0 )

[node name="Welcome" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Looking" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 10 )
bus = "SFX"

[node name="Amazing" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 11 )
bus = "SFX"

[node name="Moving" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 12 )
bus = "SFX"

[node name="Speechless" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 13 )
bus = "SFX"

[node name="Jumping" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="Crouching" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 15 )
bus = "SFX"

[node name="Sprinting" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 16 )
bus = "SFX"

[node name="Interacting" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="Congratulations" type="AudioStreamPlayer" parent="VoiceClips"]
stream = ExtResource( 18 )
bus = "SFX"

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BlackScreen" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="SkipNotification" type="Label" parent="UI"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "Fun fact: You can skip this tutorial (pause or settings)"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DiplomaDescent = SubResource( 54 )
anims/FadeIn = SubResource( 47 )
anims/RESET = SubResource( 48 )

[connection signal="body_entered" from="CSGCombiner/Section1/JumpTrigger" to="." method="_on_JumpTrigger_body_entered"]
[connection signal="body_entered" from="CSGCombiner/Section2/CrouchTrigger" to="." method="_on_CrouchTrigger_body_entered"]
[connection signal="body_entered" from="CSGCombiner/Section2/SprintingTrigger" to="." method="_on_SprintingTrigger_body_entered"]
[connection signal="animation_finished" from="CSGCombiner/Section3/Explosion" to="CSGCombiner/Section3/Button" method="_on_Explosion_animation_finished"]
[connection signal="body_entered" from="CSGCombiner/Section3/InteractionTrigger" to="." method="_on_InteractionTrigger_body_entered"]
[connection signal="timeout" from="Timers/WaitForLoad" to="." method="_on_WaitForLoad_timeout"]
[connection signal="finished" from="VoiceClips/Welcome" to="." method="_on_Welcome_finished"]
[connection signal="finished" from="VoiceClips/Looking" to="." method="_on_Looking_finished"]
[connection signal="finished" from="VoiceClips/Amazing" to="." method="_on_Amazing_finished"]
[connection signal="finished" from="VoiceClips/Moving" to="." method="_on_Moving_finished"]
[connection signal="finished" from="VoiceClips/Jumping" to="." method="_on_Jumping_finished"]

[editable path="Player"]
